--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ executing==2.2.1
 fastjsonschema==2.21.2
 folium==0.20.0
 fonttools==4.60.0
-geopandas==1.1.1
+geopandas[all]==0.14.4
 gitdb==4.0.12
 GitPython==3.1.45
 idna==3.10
