--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,15 +1,4 @@
-streamlit
-pandas
-numpy
-matplotlib
-plotly
-folium
-geopandas[all]
-shapely
-fiona
-pyproj
-rtree
-pyogrio
-altair
-branca
-requests
+streamlit>=1.22.0
+pandas>=1.5.0
+geopandas>=0.12.0
+shapely>=1.8.0
