--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,4 +1,8 @@
-streamlit>=1.22.0
-pandas>=1.5.0
-geopandas>=0.12.0
-shapely>=1.8.0
+streamlit==1.38.0
+pandas==2.2.2
+geopandas==0.14.3
+pyproj==3.6.1
+shapely==2.0.4
+fiona==1.9.6
+folium==0.20.0
+branca==0.7.2
