--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,8 +1,12 @@
 streamlit==1.38.0
-geopandas[all]==0.14.4
-pandas==2.2.3
+pandas==2.2.2
+numpy==1.26.4
 matplotlib==3.9.2
-seaborn==0.13.2
-folium==0.17.0
-streamlit-folium==0.20.0
-openpyxl==3.1.2
+folium==0.20.0
+branca==0.7.2
+
+# geospatial stack
+geopandas==0.14.3
+pyproj==3.6.1
+shapely==2.0.4
+fiona==1.9.6
