--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,12 +1,15 @@
-streamlit==1.38.0
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.9.2
-folium==0.20.0
-branca==0.7.2
-
-# geospatial stack
-geopandas==0.14.3
-pyproj==3.6.1
-shapely==2.0.4
-fiona==1.9.6
+streamlit
+pandas
+numpy
+matplotlib
+plotly
+folium
+geopandas
+shapely
+fiona
+pyproj
+rtree
+pyogrio
+altair
+branca
+requests
