--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,15 +1,8 @@
-streamlit>=1.38.0
-pandas>=1.5.0
 numpy
+streamlit
 matplotlib
 plotly
-folium
-geopandas>=0.12.0
-shapely>=1.8.0
-fiona
-pyproj
-rtree
-pyogrio
-altair
-branca
-requests
+pandas
+scipy
+ipykernel
+nbformat
